[package]
name = "cubechess-ws-service"
version = "0.0.1"
authors = ["Zak Farmer <zak@3sidedcube.org>"]
edition = "2021"

[dependencies]
sentry = "0.27.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.9"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }